--- a/Front/src/app/components/pages/products/products.component.html
+++ b/Front/src/app/components/pages/products/products.component.html
@@ -34,7 +34,7 @@
     <div routerLink="../product/{{ product.id }}" class="product-card" *ngFor="let product of resultList">
         <div class="product-card-content">
             <div class="product-image">
-                <img src="{{ images[product.id] }}" onerror="this.src='../../../../assets/images/voiture.png'" alt="{{ product.BrandName }}">
+                <img src="{{ images[product.id] }}" class="product-image" onerror="this.src='../../../../assets/images/voiture.png'" alt="{{ product.BrandName }}">
             </div>
             <div class="product-text">
                 <h2 class="product-name">{{ product.BrandName }}</h2>
