--- a/Front/src/app/components/pages/products/products.component.scss
+++ b/Front/src/app/components/pages/products/products.component.scss
@@ -185,26 +185,28 @@ app-products {
         cursor: pointer;
 
         .product-card-content {
-            display: flex; /* Use flexbox to arrange content within each product card */
-            flex-direction: row; /* Arrange content horizontally */
-            align-items: center; /* Align content vertically in the center */
+            overflow: hidden;
+            display: flex; 
+            flex-direction: row;
+            align-items: center;
 
             .product-image {
                 width: 40%;
                 margin-bottom: -8px;
                 background-size: cover;
+                
                 img {
-                    width: 100%;
-                    height: 100%;
+                    width: 220px;
+                    aspect-ratio: 1/1;
                     object-fit: cover;
                 }
             }
-    
+            
             .product-text {
                 display: flex;
                 flex-direction: column;
                 align-items: flex-start;
-                padding: 0rem 1rem 3rem 2rem;
+                padding: 0rem 1rem 3rem 0rem;
                 width: 55%;
 
                 .product-name {
