--- a/Front/src/app/components/pages/delete-product/delete-product.component.scss
+++ b/Front/src/app/components/pages/delete-product/delete-product.component.scss
@@ -26,7 +26,7 @@
         }
 
         button {
-            background-color: #bc8873; /* Green */
+            background-color: #af684c; /* Green */
             border: none;
             border-radius: 2rem;
             width: 50%;
@@ -40,17 +40,12 @@
             cursor: pointer;
 
             &:hover {
-                width: 55%;
-                font-size: 1.8rem;
-                background-color: #af684c;
-                box-shadow: 5px 5px 7px black;
-                transition: 0.1s;
+                transform: scale(1.02);
+                transition: 0.2s;
             }
 
             &:active {
-                width: 45%;
-                font-size: 1.5rem;
-                box-shadow: 2px 2px 7px black;
+                transform: scale(0.98);
                 transition: 0.1s;
             }
         }
@@ -59,9 +54,6 @@
             text-align: center;
             margin-bottom: 8rem;
             padding: 1rem;
-            border: 1px solid;
-            border-radius: 18px;
-            border-color: rgb(121, 121, 121);
             font-size: 2rem;
             min-width: 220px;
             min-height: 45px;
