--- a/Front/src/app/components/pages/product/product.component.scss
+++ b/Front/src/app/components/pages/product/product.component.scss
@@ -42,28 +42,32 @@
     .image-information-container {
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
         padding: 0 3rem;
         
         .image-container {
             display: flex;
             flex-direction: column;
             justify-content: center;
-            min-width: 45%;
-            min-height: 45%;
-            max-width: 45%;
-            max-height: 45%;
-            margin: 1rem 5rem 0 8rem;
+            align-items: center;
+            min-width: 500px;
+            min-height: 300px;
+            margin: 1rem 5rem 0 5rem;
         
             img {
                 border: 1px solid;
-                height: 350px;
-                width: auto;
-                max-width:800px;
+                aspect-ratio: auto;
+                max-width: 500px;
+                max-height: 300px;
+                min-width: 300px;
+                min-height: 300px;
             }
             
             .button-image{
                 display: flex;
                 justify-content: center;
+                align-self: center;
+                gap: 8rem;
 
                 .arrow {
                     top: 50%;
