--- a/Front/src/app/components/pages/me/me.component.html
+++ b/Front/src/app/components/pages/me/me.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="user-wrapper">
     <div class="user-panel">
         <h1 class="title">Your account</h1>
         <p *ngIf="data.Role" class="admin-text">Admin</p>
