--- a/Front/src/app/components/pages/signup/signup.component.html
+++ b/Front/src/app/components/pages/signup/signup.component.html
@@ -1,5 +1,5 @@
-<div class="wrapper">
-    <form class="register">
+<div class="user-wrapper">
+    <form class="user-panel">
         <h1 class="title">Sign up</h1>
         <div class="line">
             <i class="fa fa-user"></i>
