--- a/Front/src/app/components/pages/connection/connection.component.html
+++ b/Front/src/app/components/pages/connection/connection.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="user-wrapper">
     <form class="login">
         <h1 class="title">Log in</h1>
         <div class="line">
