--- a/Front/src/app/components/pages/products/products.component.scss
+++ b/Front/src/app/components/pages/products/products.component.scss
@@ -5,7 +5,7 @@ app-products {
 .wrapper {
     display: flex;
     justify-content: space-between;
-    margin: 5rem 5rem 5rem 5rem;
+    margin: 5rem;
 
     .title {
         display: flex;
@@ -13,9 +13,8 @@ app-products {
         padding-left: 3rem;
         width: 45%;
         margin: 1rem;
-        border: 1px solid;
+        border: 1px solid rgba(0, 0, 0, 0.499);
         border-radius: 1rem;
-        border-color: rgba(0, 0, 0, 0.499);
         background-color: rgba(255, 255, 255, 0.275);
         backdrop-filter: blur(9px);
 
@@ -34,7 +33,6 @@ app-products {
         margin: 1rem;
 
         .search-bar {
-            justify-self: center;
             border-radius: 1rem;
             border: solid 1px var(--dark);
             background-color: #c8c7c2;
@@ -46,17 +44,14 @@ app-products {
             margin-right: 4rem;
 
             &:focus {
-                outline: none;
-                border: solid 2px var(--dark);
                 background-color: #ebeae5;
             }
         }
 
         .right-options {
             display: flex;
-            flex-flow: row wrap;
             justify-content: center;
-            column-gap: 1rem;
+            column-gap: 2rem;
             padding: 2rem;
             row-gap: 1rem;
             border: 1px solid;
@@ -145,110 +140,4 @@ app-products {
         }
     }
 
-}
-
-.products-container {
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: space-evenly;
-    row-gap: 5rem;
-    column-gap: 4rem;
-    margin: 1rem 15rem 1rem 15rem;
-    border: 1px solid;
-    border-color: rgba(98, 98, 98, 0.286);
-    border-radius: 1rem;
-    backdrop-filter: blur(5px);
-    background-color: rgba(122, 115, 151, 0.089);
-    padding: 7rem;
-
-    .product-card {
-        &:hover {
-            transform: scale(1.02);
-            // box-shadow: 10px 10px 15px black;
-            transition: 0.2s;
-        }
-
-        &:active {
-            transform: scale(1.00);
-        }
-
-        transition: 0.1s;
-        width: 45%;
-        min-width: 45%;
-        background-color: var(--cream);
-        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-        border-radius: 1rem;
-        border: 2px groove;
-        border-color: rgba(89, 89, 89, 0.405);
-        overflow: hidden;
-        cursor: pointer;
-
-        .product-card-content {
-            overflow: hidden;
-            display: flex; 
-            flex-direction: row;
-            align-items: center;
-
-            .product-image {
-                width: 40%;
-                margin-bottom: -8px;
-                background-size: cover;
-                
-                img {
-                    width: 220px;
-                    aspect-ratio: 1/1;
-                    object-fit: cover;
-                }
-            }
-            
-            .product-text {
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                padding: 0rem 1rem 3rem 0rem;
-                width: 55%;
-
-                .product-name {
-                    font-size: 25px;
-                    font-weight: bold;
-                    margin: 0 0 -25px 0;
-                }
-
-                .product-model {
-                    font-size: 18px;
-                }
-    
-                .product-description {
-                    width: 90%;
-                    height: 70px;
-                    font-size: 16px;
-                    color: #2a2a2a;
-                    margin: 0px 0;
-                    overflow: hidden; 
-                    text-overflow: ellipsis; 
-                    display: -webkit-box;
-                    -webkit-line-clamp: 3; 
-                    -webkit-box-orient: vertical;
-                    white-space: normal;
-                }
-            }
-        }
-
-
-        .product-details {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px;
-            background-color: var(--main-color);
-
-            .product-price {
-                font-size: 16px;
-                font-weight: bold;
-                color: black;
-            }
-        }
-    }
 }
