--- a/Front/src/app/components/pages/product/product.component.html
+++ b/Front/src/app/components/pages/product/product.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
     <div class="product-container">
-        <div class="title">
+        <div class="car-title">
             <h1>{{product.BrandName}}</h1>
             <p class="model-showcase">{{product.ModelBrandName}}</p>
             <hr />
