--- a/Front/src/app/components/pages/product/product.component.scss
+++ b/Front/src/app/components/pages/product/product.component.scss
@@ -17,7 +17,7 @@
     height: 50%;
 
     
-    .title {
+    .car-title {
         display: flex;
         flex-direction: column;
         width: 90%;
