--- a/Front/src/styles.scss
+++ b/Front/src/styles.scss
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+$blue-color: #7187bc;
+$border-color: #ddd;
+$input-padding: 15px 1rem;
+$border-radius: 4px;
+$transition-time: 0.4s;
 /* GLOBAL */
 :root {
     --main-color: hsl(222, 35%, 64%);
@@ -57,6 +62,7 @@ a {
     text-decoration: none;
 }
 
+// Global button style
 .button {
     width: 45%;
     height: 5rem;
@@ -82,5 +88,127 @@ a {
         border-bottom-width: 3px;
         outline: none;
     }
+}
+
+// Global Line style
+.line {
+    display: flex;
+    align-items: baseline;
+    
+    .input-form,
+    .details,
+    .display-form,
+    .brand-model {
+        width: 100%;
+        padding: $input-padding;
+        margin: 1rem 0;
+        font-size: large;
+        border-radius: $border-radius;
+        border: 1px solid $border-color;
+        transition: border-width $transition-time;
+
+        &:focus {
+            outline: none;
+            color: #444;
+            border-color: $blue-color;
+            border-left-width: 3rem;
+        }
+    }
+
+    .display-form {
+        padding: 0.3rem 1rem;
+        margin: 0.2rem 0.4rem;
+    }
+
+    .details,
+    .brand-model {
+        padding: 10px 1rem;
+
+        &:focus {
+            border-left-width: 1px;
+        }
+
+    }
+
+    .detail-button {
+        width: 15%;
+        margin: 0.2rem 0.2rem;
+        max-width: 15%;
+        height: 5%;
+    }
+}        
+
+// Adding images styles
+.add-image {
+    box-sizing: border-box;
+    width: 45%;
+
+    margin: 0 4rem;
+
+    h3 {
+        color: var(--dark);
+        border-bottom: 1px solid #bebebe;
+    }
+
+    .add-image-container {
+        display: flex;
+        flex-wrap: wrap;
+
+        gap: 0.5rem;
+        max-height: 330px;
+        overflow-y: auto; 
+        border: 1px solid #bebebe;
+        padding: 1rem;
+        align-items: center;
+
+        label {
+            font-size: 150%;
+        }
+        
+        img,
+        label {
+            cursor: pointer;
+            display: flex;
+            width: 150px;
+            height: 150px;
+            justify-content: center;
+            align-items: center;
+            border: solid 1px black;
+            border-radius: 5px;
+            object-fit: cover;
+        }
+
+
+        input {
+            width: 150px;
+            height: 150px;
+            opacity: 0;
+            height: 0;
+        }
+    }
+}
+
+// Title 
+.title {
+    color: var(--dark);
+    text-align: center;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #bebebe;
+}
+
+// Message
+.message {
+    text-align: center;
+    align-self: center;
+    margin-bottom: 8rem;
+    padding: 1rem;
+    border: 1px solid;
+    border-radius: 18px;
+    border-color: rgb(121, 121, 121);
+    font-size: 2rem;
+    min-width: 220px;
+    max-width: 400px;
+    min-height: 45px;
+    position: static;
 }
 /* End GLOBAL */
