[FIX] - Big reorganisation

--- a/Front/src/app/components/pages/connection/connection.component.html
+++ b/Front/src/app/components/pages/connection/connection.component.html
@@ -1,5 +1,5 @@
-<div class="user-wrapper">
-    <form class="login">
+<div class="main-wrapper">
+    <form class="main-panel">
         <h1 class="title">Log in</h1>
         <div class="line">
             <i class="fa-solid fa-at"></i>
