--- a/Front/src/app/components/pages/create-product/create-product.component.scss
+++ b/Front/src/app/components/pages/create-product/create-product.component.scss
@@ -1,52 +1,1 @@
-$blue-color: #7187bc;
-$red-color: #b95071;
-$border-color: #ddd;
-$input-padding: 15px 1rem;
-$detail-button-width: 15%;
-$button-width: 45%;
-$border-radius: 4px;
-$transition-time: 0.4s;
-
-.new-product {
-    display: flex;
-    flex-direction: column;
-    border-radius: 5px;
-    padding: 1rem 2rem;
-    width: 115rem;
-    max-width: 100%;
-    min-height: 20%;
-    background: var(--cream);
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
-
-    .values {
-        display: flex;
-        flex-direction: row;
-
-        .admin-text {
-            color: var(--gold);
-            background-color: var(--dark);
-            font-weight: bold;
-            text-align: center;
-        }
-
-        i {
-            color: var(--dark);
-            margin: 0 1rem 0 0;
-        }
-
-        .display-details {
-            row-gap: 0.5rem;
-            max-height: 100px;
-            height: 100px;
-            overflow-y: auto;
-            border: 1px solid #bebebe;
-            padding-right: 1rem;
-        }
-    }
-}
-
-
-.button {
-    width: 25%;
-    margin-top: 5rem;
-}
+@import url("../../../../styles/car.styles.scss");
