--- a/Front/src/app/components/pages/delete-product/delete-product.component.html
+++ b/Front/src/app/components/pages/delete-product/delete-product.component.html
@@ -1,7 +1,7 @@
-<div class="wrapper">
-    <div class="inner">
-        <p class="title">Are you sure ?</p>
-        <p class="message">{{ message }}</p>
-        <button (click)="productDelete()" type="button">Delete!</button><br />
+<div class="delete-main-wrapper main-wrapper">
+    <div class="delete-main-panel main-panel">
+        <p class="delete-title title">Are you sure ?</p>
+        <p class="delete-message message">{{ message }}</p>
+        <button (click)="productDelete()" type="button" class="delete-button button">Delete!</button><br />
     </div>
 </div>
