--- a/Front/src/app/components/pages/delete-product/delete-product.component.scss
+++ b/Front/src/app/components/pages/delete-product/delete-product.component.scss
@@ -1,53 +1,1 @@
-.wrapper {
-    display: flex;
-    justify-content: center;
-
-    .inner {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 2rem;
-        margin-top: 10rem;
-        padding: 2rem 25rem 5rem 25rem;
-        border: 1px solid;
-        border-color: rgb(85, 73, 57);
-        background-color: rgba(240, 248, 255, 0.635);
-        backdrop-filter: blur(9px);
-        border-radius: 5rem;
-        max-height: 450px;
-
-        .title {
-            margin-bottom: 1rem;
-            font-size: 5rem;
-            border: 1px solid;
-            border-radius: 5rem;
-            background-color: azure;
-            padding: 3rem 10rem;
-        }
-
-        button {
-            background-color: #af684c; /* Green */
-            border: none;
-            border-radius: 2rem;
-            width: 50%;
-            color: white;
-            padding: 15px 32px;
-            text-align: center;
-            display: inline-block;
-            font-size: 16px;
-            box-shadow: 3px 3px 7px black;
-            transition: 0.1s;
-            cursor: pointer;
-
-            &:hover {
-                transform: scale(1.02);
-                transition: 0.2s;
-            }
-
-            &:active {
-                transform: scale(0.98);
-                transition: 0.1s;
-            }
-        }
-    }
-}
+@import "../../../../styles/delete.styles.scss";
