--- a/Front/src/app/components/pages/error404/error404.component.scss
+++ b/Front/src/app/components/pages/error404/error404.component.scss
@@ -14,7 +14,7 @@
     .forbidden-subtitle {
         font-weight: 500;
         font-size: 3rem;
-        color: var(--cream);
+        color: var(--dark);
         text-align: center;
     }
 }
