--- a/Front/src/app/components/pages/legal/legal.component.html
+++ b/Front/src/app/components/pages/legal/legal.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="main-wrapper">
     <div class="legal">
         <h1>Terms and Conditions of Sale for Elite Cars Vault</h1>
         
