--- a/Front/src/app/components/pages/legal/legal.component.scss
+++ b/Front/src/app/components/pages/legal/legal.component.scss
@@ -1,10 +1,4 @@
-.wrapper {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    position: relative;
-    width: 100%;
+.main-wrapper {
     min-height: 69vh;
     padding: 8rem 5rem 8rem;
 }
