--- a/Front/src/app/components/pages/modify-product/modify-product.component.html
+++ b/Front/src/app/components/pages/modify-product/modify-product.component.html
@@ -1,4 +1,4 @@
-<div class="user-wrapper">
+<div class="main-wrapper">
     <div class="new-product">
         <div class="image-container">
             <img [src]="images[currentImageIndex]" onerror="this.src='../../../../assets/images/voiture.png'"
