--- a/Front/src/app/components/pages/product/product.component.scss
+++ b/Front/src/app/components/pages/product/product.component.scss
@@ -1,6 +1,5 @@
-.wrapper {
-    display: flex;
-    justify-content: center;
+.main-wrapper {
+    padding: 1rem;
 }
 
 .product-container {
@@ -157,18 +156,14 @@
         row-gap: 1rem;
 
         a {
-            background: linear-gradient(163deg, var(--light) 0%, var(--dark) 61%);
             border: none;
             color: #fff;
             padding: 1.5rem 4rem;
             border-radius: 1rem;
-            box-shadow: 4px 4px 4px 0px var(--hard-shadow-color);
             cursor: pointer;
 
             &:hover {
-                // background: linear-gradient(163deg, var(--gold) 10%, var(--light-gold));
                 transform: scale(1.05);
-                // color: black;
                 transition: 0.2s;
             }
 
@@ -178,34 +173,20 @@
             }
         }
 
-        .back-btn {
-            background: rgb(122, 162, 184);
+        .button {
+            display: flex;
+            width: 25%;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modify-btn {
+            background: var(--primary);
         }
 
         .delete-btn {
-            background: brown;
+            background: var(--red);
         }
     }
 
-}
-
-.simple-tab {
-    width: 97%;
-    margin: 10px auto 20px 20px;
-}
-
-.simple-tab,
-.simple-tab th,
-.simple-tab td {
-    border: 1px solid #000;
-    border-collapse: collapse;
-}
-
-th {
-    color: #fff;
-    background-color: hsl(0, 30%, 40%);
-}
-
-tr:nth-child(odd) {
-    background-color: hsl(0, 10%, 80%);
 }
