--- a/Front/src/app/components/pages/products/products.component.html
+++ b/Front/src/app/components/pages/products/products.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <div class="title">
+    <div class="home-title">
         <h1>{{ catchPhrase }}</h1>
         <h3>Discover our collection of high end cars</h3>
     </div>
