--- a/Front/src/app/components/pages/signup/signup.component.scss
+++ b/Front/src/app/components/pages/signup/signup.component.scss
@@ -8,6 +8,11 @@
         color: #7187bc;
         text-decoration: none;
         text-align: center;
+
+        i {
+            color: var(--dark);
+            margin-right: 1rem;
+        }
     }
 }
 
