--- a/Front/src/app/components/pages/connection/connection.component.scss
+++ b/Front/src/app/components/pages/connection/connection.component.scss
@@ -1,53 +1,23 @@
-.login {
-    border-radius: 5px;
-    padding: 1rem 2rem 2rem 2rem;
+.main-panel {
     width: 50rem;
-    max-width: 100%;
-    min-height: 20%;
-    background: var(--cream);
-    padding-bottom: 2rem;
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
 
     .title {
-            color: var(--dark);
-            text-align: center;
-            margin: 1rem 0 3rem 0;
-            border-bottom: 1px solid #bebebe;
-            padding-bottom: 2rem;
-    }
-
-    i {
-        color: var(--dark);
-        margin: 0 1rem 0 0;
+        font-size: 4rem;
     }
 
     .line {
-        display: flex;
-        align-items: baseline;
-
-        .input-form {
-            width: 100%;
-            padding: 15px 1rem;
-            margin: 0;
-
-            color: #787878;
-            font-size: large;
-
-            border-radius: 4px;
-            border: 1px solid #ddd;
-            transition: border-width 0.4s ease;
-
-            &:focus {
-                outline: none;
-                color: #444;
-                border-color: #7187bc;
-                border-left-width: 3rem;
-            }
-        }
+        width: 95%;
     }
+
     .register-text{
         display: flex;
         justify-content: center;
+
+        i {
+            color: var(--dark);
+            margin-right: 1rem;
+        }
+
         .register-link {
             cursor: pointer;
             font-size: 1em;
@@ -58,7 +28,6 @@
     }
 
     .button {
-        min-width: 13rem;
         margin-top: 3rem;
     }
 }
