--- a/Front/src/app/components/pages/contact/contact.component.scss
+++ b/Front/src/app/components/pages/contact/contact.component.scss
@@ -10,7 +10,7 @@ form {
     max-width: 100%;
     background-color: var(--cream);
     padding: 1rem;
-    border-radius: 1rem;
+    border-radius: 0.1rem;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
 
     h1 {
@@ -31,6 +31,12 @@ form {
         margin: 0.5rem 0;
     }
 
+    textarea{
+        min-height: 100px; 
+        max-width: 72.5rem;
+        min-width: 72.5rem;
+    }
+
     div {
         display: flex;
         align-items: center;
@@ -45,6 +51,7 @@ form {
         }
     }
 }
+
 
 form input:not([type='radio']),
 select,
@@ -63,7 +70,6 @@ textarea:focus {
     border-style: none;
     border-bottom-style: solid;
     border-color: #54a6b1;
-    /* border-bottom-style: 2px solid #54A6B1; */
 }
 
 form fieldset legend {
@@ -86,7 +92,8 @@ form fieldset legend::after {
 }
 
 form input[type=submit] {
-    width: 100px;
+    align-self: center;
+    width: 150px;
     background-color: #000;
     border: 2px solid #000;
     color: #fff;
