--- a/Front/src/app/components/pages/me/me.component.html
+++ b/Front/src/app/components/pages/me/me.component.html
@@ -1,5 +1,5 @@
-<div class="user-wrapper">
-    <div class="user-panel">
+<div class="main-wrapper">
+    <div class="main-panel">
         <h1 class="title">Your account</h1>
         <p *ngIf="data.Role" class="admin-text">Admin</p>
         <div *ngIf="!isEditMode">
