--- a/Front/src/app/components/pages/product/product.component.html
+++ b/Front/src/app/components/pages/product/product.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="main-wrapper">
     <div class="product-container">
         <div class="car-title">
             <h1>{{product.BrandName}}</h1>
@@ -34,11 +34,11 @@
             </div>
         </div>
         <div class="controls">
-            <a routerLink="../../products" class="back-btn">Back</a>
+            <a routerLink="../../products" class="back-btn button">Back</a>
             <a *ngIf="isOwnProduct || isAdmin" routerLink="../../product/modify/{{ product.id }}"
-                class="modify-btn">Modify</a>
+                class="modify-btn button">Modify</a>
             <a *ngIf="isOwnProduct || isAdmin" routerLink="../../product/delete/{{ product.id }}"
-                class="delete-btn">Delete</a>
+                class="delete-btn button">Delete</a>
         </div>
     </div>
 </div>
