--- a/Front/src/app/components/pages/products/products.component.scss
+++ b/Front/src/app/components/pages/products/products.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../styles/cars.styles.scss";
+
 app-products {
     padding: 0 1rem;
 }
@@ -7,7 +9,7 @@ app-products {
     justify-content: space-between;
     margin: 5rem;
 
-    .title {
+    .home-title {
         display: flex;
         flex-direction: column;
         padding-left: 3rem;
