--- a/Front/src/app/components/pages/modify-product/modify-product.component.scss
+++ b/Front/src/app/components/pages/modify-product/modify-product.component.scss
@@ -1,86 +1,20 @@
-.new-product {
+@import url("../../../../styles/car.styles.scss");
+
+.details-to-change {
+    margin: 0.3rem 0.3rem 0 0rem;
+}
+
+.buttons {
     display: flex;
-    flex-direction: column;
-    border-radius: 5px;
-    padding: 1rem 2rem 0 2rem;
-    width: 65rem;
-    max-width: 100%;
-    min-height: 20%;
-    background: var(--cream);
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
+    flex-direction: row;
+    justify-content: center;
 
-    .image-container {
-        padding: 3rem;
-        max-width: 35rem;
-        min-width: 35rem;
-        align-self: center;
-
-        img {
-            width: 100%;
-            border: 0.3rem solid;
-            border-radius: 2rem;
-        }
-
-        .button-image{
-            display: flex;
-            justify-content: center;
-
-            .arrow {
-                top: 50%;
-                transform: translateY(10%);
-                background-color: transparent;
-                width: 20%;
-                color: black;
-                border: none;
-                font-size: 3rem;
-                cursor: pointer;
-        
-                &:disabled {
-                    cursor: default;
-                    opacity: 0.5;
-                }
-            }
-        
-            .left-arrow {
-                left: 0;
-            }
-        
-            .right-arrow {
-                right: 0;
-            }
-        }
+    .create-button {
+        margin-left: 2rem;
+        margin-right: 2rem;
     }
 
-    .admin-text {
-        color: var(--gold);
-        background-color: var(--dark);
-        font-weight: bold;
-        text-align: center;
-    }
-
-    i {
-        color: var(--dark);
-        margin: 0 1rem 0 0;
-    }
-
-    .products-text {
-        display: flex;
-        justify-content: center;
-
-        .products-link {
-            cursor: pointer;
-            font-size: 1em;
-            color: #7187bc;
-            text-decoration: none;
-            text-align: center;
-        }
-    }
-
-    .button {
-        margin-top: 3rem;
-    }
-
-    .delete {
-        background-color: #b95071;
+    .cancel-button {
+        background-color: var(--red);
     }
 }
